# iris-dev

./: .gitignore  Cargo.toml  README.md  iris-dev-overview.pptx  run_benchmark.py  vscode-iris-dev-0.2.4.vsix  ~$iris-dev-overview.pptx
.cargo/: config.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
benchmark/: run_021.py
benchmark/021/: README.md
crates/iris-dev-bin/: Cargo.toml
crates/iris-dev-bin/src/: main.rs
crates/iris-dev-bin/src/cmd/: compile.rs  init.rs  install.rs  mcp.rs  mod.rs  plugin.rs
crates/iris-dev-bin/tests/: plugin_dispatch_tests.rs
crates/iris-dev-core/: Cargo.toml
crates/iris-dev-core/src/: elicitation.rs  generate.rs  lib.rs
crates/iris-dev-core/src/iris/: connection.rs  discovery.rs  mod.rs  vscode_config.rs  workspace_config.rs
crates/iris-dev-core/src/manifest/: mod.rs  resolve.rs
crates/iris-dev-core/src/skills/: mod.rs
crates/iris-dev-core/src/tools/: doc.rs  info.rs  interop.rs  mod.rs  scm.rs  search.rs  skills_tools.rs
crates/iris-dev-core/tests/: admin_unit_tests.rs  discovery_tests.rs  docker_discovery_e2e.rs  interop_e2e_tests.rs  interop_unit_tests.rs  log_store_tests.rs  manifest_tests.rs  mcp_handshake.rs  progressive_disclosure_integration.rs  skills_tests.rs  symbols_local_tests.rs  vscode_config_tests.rs
crates/iris-dev-core/tests/integration/: test_compile_cmd.rs  test_e2e.rs  test_e2e_all_tools.rs  test_e2e_spec022.rs  test_mcp_iris.rs  test_retry.rs  test_scm.rs
crates/iris-dev-core/tests/unit/: test_compile_params.rs  test_connection_fixes.rs  test_discovery_unit.rs  test_doc_params.rs  test_elicitation.rs  test_elicitation_sweep.rs  test_generate_unit.rs  test_info_unit.rs  test_scm_escaping.rs  test_scm_unit.rs  test_search_unit.rs  test_skills_unit.rs  test_tools_fixes.rs  test_toolset.rs  test_workspace_config.rs
docs/: council-draft.txt  eap-confluence-draft.md  eap-confluence-draft.txt  faq-reply-instances-namespaces.txt  jon-jenson-email-draft.txt  nathan-early-adopter-note.txt  stevep-reply-2.txt  test-020-manual.sh  tim-reply-draft.txt  wwsaleseng-announcement.txt
light-skills/: AGENTS.md  BENCHMARKING.md  README.md  compile.md  introspect.md  iris-dev.toml
light-skills/kb/: ipm-module-authoring.md  iris-error-codes.md  objectscript-idioms.md
scripts/: compile-hook.sh  coverage.sh
skills/: INDEX.md  README.md
skills/aihub-eap/: SKILL.md
skills/compile/: SKILL.md
skills/ensemble-production/: SKILL.md  skill.toml
skills/introspect/: SKILL.md
skills/iris-connectivity/: SKILL.md
skills/iris-linux-docker/: SKILL.md
skills/iris-objectscript-eval/: SKILL.md  skill.toml
skills/iris-product-features/: SKILL.md
skills/iris-sql/: SKILL.md  skill.toml
skills/iris-vector-ai/: SKILL.md
skills/objectscript-debugging/: SKILL.md  skill.toml
skills/objectscript-fewshot-fixes/: SKILL.md
skills/objectscript-guardrails/: SKILL.md
skills/objectscript-list-patterns/: SKILL.md
skills/objectscript-loop-patterns/: SKILL.md
skills/objectscript-mac-routines/: SKILL.md
skills/objectscript-navigation/: SKILL.md
skills/objectscript-review/: SKILL.md  skill.toml
skills/objectscript-sql-patterns/: SKILL.md
skills/objectscript-tdd/: SKILL.md
skills/objectscript-unit-test/: SKILL.md  skill.toml
specs/017-interop-tools/: data-model.md  demo-script.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/018-discovery-parity/: spec.md
specs/019-iris-dev-v2-unified/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/020-scm-elicitation-auto-open/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/021-path-aware-benchmark/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/028-better-docker-discovery/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/029-rlm-log-analyzer/: spec.md
specs/030-gepa-skill-optimizer/: spec.md
tests/integration/: conftest.py  conftest_022.py  test_022_all_tools.py  test_032_compile_hook.py
vscode-iris-dev/: README.md  package-lock.json  package.json
(+81 files in other folders)
