[workspace]
members = [
    "crates/iris-dev-core",
    "crates/iris-dev-bin",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Thomas Dyar <thomas.dyar@intersystems.com>"]
license = "MIT"
repository = "https://gitlab.iscinternal.com/devx/iris-dev"

[workspace.dependencies]
# MCP server
rmcp = { version = "1.2", features = ["server", "macros", "schemars", "transport-io"] }
# CLI
clap = { version = "4", features = ["derive", "env"] }
which = "6"
# Async runtime
tokio = { version = "1", features = ["full"] }
# IRIS HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# Docker discovery
bollard = "0.17"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
toml = "0.8"
# Semver for manifest
semver = { version = "1", features = ["serde"] }
# Error handling + logging
anyhow = "1"
regex = "1"
tempfile = "3"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
