[package]
name = "iris-dev-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rmcp.workspace = true
tokio.workspace = true
reqwest.workspace = true
bollard.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
toml.workspace = true
semver.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
