[package]
name = "iris-dev-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rmcp.workspace = true
tokio.workspace = true
reqwest.workspace = true
bollard.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
toml.workspace = true
semver.workspace = true
anyhow.workspace = true
regex.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Test dependencies
[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3"
serde_json.workspace = true
reqwest.workspace = true

[[test]]
name = "discovery_tests"
path = "tests/discovery_tests.rs"

[[test]]
name = "manifest_tests"
path = "tests/manifest_tests.rs"

[[test]]
name = "mcp_handshake"
path = "tests/mcp_handshake.rs"

[[test]]
name = "vscode_config_tests"
path = "tests/vscode_config_tests.rs"

[[test]]
name = "skills_tests"
path = "tests/skills_tests.rs"

[[test]]
name = "test_mcp_iris"
path = "tests/integration/test_mcp_iris.rs"

[[test]]
name = "test_compile_cmd"
path = "tests/integration/test_compile_cmd.rs"

[[test]]
name = "interop_unit_tests"
path = "tests/interop_unit_tests.rs"

[[test]]
name = "interop_e2e_tests"
path = "tests/interop_e2e_tests.rs"
